[project]
name = "radiant-api"
version = "0.1.0"
description = ""
authors = [{ name = "Pepe Coral", email = "coritochico@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
  "fastapi (>=0.121.0,<0.122.0)",
  "uvicorn[standard] (>=0.38.0,<0.39.0)",
  "psycopg2-binary (>=2.9.11,<3.0.0)",
  "sqlalchemy (>=2.0.44,<3.0.0)",
  "alembic (>=1.17.1,<2.0.0)",
  "pydantic-settings (>=2.11.0,<3.0.0)",
]


[tool.poetry]
packages = [{ include = "radiant_api", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
  "pytest (>=8.4.2,<9.0.0)",
  "pytest-asyncio (>=1.2.0,<2.0.0)",
  "httpx (>=0.28.1,<0.29.0)",
  "poethepoet (>=0.37.0,<0.38.0)",
  "pre-commit (>=4.4.0,<5.0.0)",
  "commitizen (>=4.10.0,<5.0.0)",
  "python-semantic-release (>=10.5.2,<11.0.0)",
]


[tool.poe.tasks]
dev = "uvicorn src.radiant_api.main:app --reload"
test = "pytest tests"

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.0"
tag_format = "v$version"


[tool.semantic_release]
version_variable = "pyproject.toml:tool.poetry.version"
upload_to_pypi = false
commit_message = "chore: Bump version to {version} [skip ci]"
